web: feat: add events

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,8 +7,8 @@
     </p>
 
     <div class="cta-buttons">
-      <a href="#getting-started" class="btn btn-primary">Get Started</a>
-      <a href="#features" class="btn btn-secondary">Learn More</a>
+      <a href="#getting-started" class="btn btn-primary" data-umami-event="get-started-btn">Get Started</a>
+      <a href="#features" class="btn btn-secondary" data-umami-event="learn-more-btn">Learn More</a>
     </div>
 
     {{ partial "terminal-demo.html" . }}
@@ -214,7 +214,7 @@ ghp_1234567890abcdef
     {{ partial "setup-terminal.html" . }}
 
     <div class="cta-section">
-      <a href="#docs" class="btn btn-primary">View Full Documentation</a>
+      <a href="#docs" class="btn btn-primary" data-umami-event="view-full-documentation-btn">View Full Documentation</a>
     </div>
   </div>
 </section>
