--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,14 +4,10 @@
       <a href="/" class="logo">indietool</a>
       <ul class="nav-links">
         {{ range .Site.Menus.main }}
-        <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+        <li><a href="{{ .URL }}" data-umami-event="{{ .Name | lower }}">{{ .Name }}</a></li>
         {{ end }}
       </ul>
-      <button
-        class="mobile-menu-btn"
-        aria-label="Toggle navigation menu"
-        aria-expanded="false"
-      >
+      <button class="mobile-menu-btn" aria-label="Toggle navigation menu" aria-expanded="false">
         ☰
       </button>
     </nav>
