web: add umami tag

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,4 +14,4 @@
 {{ $css := . | resources.Minify }}
 <link rel="stylesheet" href="{{ $css.Permalink }}" {{ if hugo.IsProduction }} integrity="{{ $css.Data.Integrity }}" {{ end }} />
 {{ end }}
-<script defer src="https://i.indietool.dev/script.js" data-website-id="810d8615-dbd3-4166-a4be-51529c7407da"></script>
+<script defer src="https://i.indietool.dev/script.js" data-website-id="810d8615-dbd3-4166-a4be-51529c7407da" data-tag="web"></script>
